# conveyer-system-simpy-distributed

./: .gitignore  LICENSE  README.md  client.py  conveyor.proto  conveyor_pb2.py  conveyor_pb2_grpc.py  deliverables.md  server.py
Multiagents-for-ICU-6G/: .env.example  README.md  docker-compose.yml  pyproject.toml  report.md
Multiagents-for-ICU-6G/ollama/: Dockerfile  entrypoint.sh
Multiagents-for-ICU-6G/src/icsagents/: Dockerfile  api.py  crew.py  main.py  problems.txt
Multiagents-for-ICU-6G/src/icsagents/config/: agents.yaml  tasks.yaml
client/: Dockerfile  client.py  load_test.py  requirements.txt
kubernetes/: client-deployment.yaml  crewai-deployment.yaml  crewai-service.yaml  hpa.yaml  ingress.yaml  kafka.yaml  kustomization.yaml  ollama-deployment.yaml  ollama-service.yaml  openwebui-deployment.yaml  openwebui-service.yaml  persistent-storage.yaml  priorityclass.yaml  pvc.yaml  server-deployment.yaml  server-headless-service.yaml  server-service.yaml  webui-deployment.yaml
monitoring/: prometheus.yml
old_dumps/: client.py  requirements.txt
scripts/: load_test.py
server/: Dockerfile  conveyor.proto  conveyor.py  raft.py  requirements.txt  server.py
