[project]
name = "icsagents"
version = "0.1.0"
description = "icsagents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0"
]

[project.scripts]
icsagents = "icsagents.main:run"
run_crew = "icsagents.main:run"
train = "icsagents.main:train"
replay = "icsagents.main:replay"
test = "icsagents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
